--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 .home {
-    font-family: "Press Start 2P", system-ui;
+  font-family: "Press Start 2P", system-ui;
 }
+
+/* Sejahat itu ternyato kau diah 
+    ok fine
+*/
