--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 h1 {
   font-family: "Press Start 2P", system-ui;
 }
+
 h2 {
   font-family: "EB Garamond", serif;
 }
 /* Sejahat itu ternyato kau diah 
     ok fine
+
+    ak anak baik
 */
 
