Ganti Warna Link

--- a/style.css
+++ b/style.css
@@ -5,9 +5,16 @@ h1 {
 h2 {
   font-family: "EB Garamond", serif;
 }
+
+.linkContact {
+  color: #a392ea;
+  text-decoration: none;
+}
 /* Sejahat itu ternyato kau diah 
     ok fine
 
     ak anak baik
-*/
 
+    BOHONGG
+    CONFLICT NIH GAWE KAU
+*/
