--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@ h2,
   color: #a392ea;
   font-style: normal;
 }
+
+.unguGelap {
+  background-color: #282b37;
+}
+.putih {
+  color: white;
+}
 /* Sejahat itu ternyato kau diah 
     ok fine
 
