--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ h2,
 .putih {
   color: white;
 }
+
+.borderUngu {
+  border: 2px solid #a392ea;
+}
 /* Sejahat itu ternyato kau diah 
     ok fine
 
