--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h2,
   height: 100%;
   width: auto;
 }
+
 .linkContact {
   color: #a392ea;
   text-decoration: none;
@@ -24,12 +25,41 @@ h2,
 .unguGelap {
   background-color: #282b37;
 }
+
 .putih {
   color: white;
 }
 
 .borderUngu {
   border: 2px solid #a392ea;
+}
+
+.rotateKanan {
+  transition: transform 0.6s ease;
+}
+
+.rotateKiri {
+  transition: transform 0.6s ease;
+}
+
+.rotateKiri:hover {
+  transform: rotate(-5deg) scale(1.05);
+}
+
+.rotateKanan:hover {
+  transform: rotate(5deg) scale(1.05);
+}
+
+.rotateHakim {
+  transition: transform 0.6s ease;
+}
+
+.rotateHakim:hover {
+  transform: rotate(180deg) scale(1.05);
+}
+
+.teksHakim {
+  transform: rotate(180deg);
 }
 /* Sejahat itu ternyato kau diah 
     ok fine
