--- a/style.css
+++ b/style.css
@@ -62,6 +62,18 @@ h2,
   transform: rotate(180deg);
 }
 
+.rotateContactHakim:hover {
+  animation: rotateHakim 1s linear infinite;
+}
+@keyframes rotateHakim {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 /* ALANGKE SARO STYLING TOOLTIP NI OEE */
 .tooltip.show {
   opacity: 1 !important;
